--- a/web/index.html
+++ b/web/index.html
@@ -29,10 +29,14 @@
 
   <title>shoply</title>
   <link rel="manifest" href="manifest.json">
+  <!-- cropperjs -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.js"></script>
 
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
+
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer=""></script>
